--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         class="icon"
                         />
                         <h3>Education</h3>
-                        <p>Masters in Data Science <br />Bechers in Electrical Engineer</p>
+                        <p>Masters in Data Science <br />Bachelor’s in Electrical Engineering</p>
                     </div>
                 </div>
                 <div class="text-container">
