--- a/index.html
+++ b/index.html
@@ -105,11 +105,8 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        Here you can write about your self. 
-                        In detailed about your education or experience in general. 
-                        Please write this Vashishth. 
-                        You're great. one of the best human being. 
-                        Vashishth you're one of the greatest data Scientist.
+                        I'm a passionate Data Scientist with a Master’s in Data Science from Dhirubhai Ambani University. I spent 2.5 years at a product-based fintech company, where I worked on Neo Banking, Agency Banking, and Wallet Systems—optimizing workflows and bridging the gap between technology and business needs.
+Now, I’m fully focused on building impactful, AI-driven solutions. With a strong command of Python, SQL, Math, Statistics, Machine Learning, and Deep Learning, I blend technical precision with business insight to solve real-world problems. What sets me apart is my ability to think analytically, communicate clearly, and bring creative problem-solving to every challenge.
                     </p>
                 </div>
             </div>
