--- a/index.html
+++ b/index.html
@@ -104,10 +104,7 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>
-                        I'm a passionate Data Scientist with a Master’s in Data Science from Dhirubhai Ambani University. I spent 2.5 years at a product-based fintech company, where I worked on Neo Banking, Agency Banking, and Wallet Systems—optimizing workflows and bridging the gap between technology and business needs.
-Now, I’m fully focused on building impactful, AI-driven solutions. With a strong command of Python, SQL, Math, Statistics, Machine Learning, and Deep Learning, I blend technical precision with business insight to solve real-world problems. What sets me apart is my ability to think analytically, communicate clearly, and bring creative problem-solving to every challenge.
-                    </p>
+                    <p> I'm a passionate Data Scientist with a Master’s from DA-IICT and 2.5 years of experience as a Business Analyst in fintech. I’ve worked on Neo Banking, Agency Banking, and Wallet Systems—streamlining workflows and aligning tech with business goals. Now, I focus on building AI-driven solutions by blending skills in Python, SQL, ML, DL, and statistics with strong business insight.
                 </div>
             </div>
         </div>
