--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p> I'm a passionate Data Scientist with a Master’s from DA-IICT and 2.5 years of experience as a Business Analyst in fintech. I’ve worked on Neo Banking, Agency Banking, and Wallet Systems—streamlining workflows and aligning tech with business goals. Now, I focus on building AI-driven solutions by blending skills in Python, SQL, ML, DL, and statistics with strong business insight.
+                    <p> I'm a passionate Data Scientist with a Master’s from DA-IICT and 2.5 years of experience as a Business Analyst in fintech. 
+                        I’ve worked on Neo Banking, Agency Banking, and Wallet Systems—streamlining workflows and aligning tech with business goals. 
+                        Now, I focus on building AI-driven solutions by blending skills in Python, SQL, ML, DL, and statistics with strong business insight.
                 </div>
             </div>
         </div>
