--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         <p class="section__text__p1">Browsw My Recent</p>
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
-            <div class="about-containers">
+            <div class="about-containers horizontal-scroll">
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img
@@ -353,14 +353,13 @@
             </div>
             </div>
         </div>
-        
+    </section> 
         <img 
         src="./Assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
         />
-    </section>
     <section id="contact">
         <p class="section__text__p1">Get in Touch</p>
         <h1 class="title">Contact Me</h1>
