--- a/index.html
+++ b/index.html
@@ -86,10 +86,9 @@
             </div>
             <div class="about-text">
                 <p>
-                    I bridge the gap between complex data and actionable business insights. With a Master’s in Data Science and over 2.5 years of experience in Fintech (Neo Banking, Wallets), I specialize in building AI-driven solutions that scale.
+                    Data Scientist with 2.5+ years of fintech analytics experience, with a strong foundation in Python, statistics, SQL, and machine learning. Experienced in building and deploying end-to-end ML systems for real-world business problems.
                 </p>
                 <p>
-                    My approach combines rigorous statistical analysis with modern Deep Learning techniques. Whether it's optimizing SQL workflows or deploying Neural Networks, I focus on efficiency, accuracy, and business impact.
                 </p>
             </div>
         </div>
