--- a/index.html
+++ b/index.html
@@ -99,36 +99,39 @@
         
         <div class="skills-grid">
             <div class="skill-category">
-                <h3><i class="fas fa-brain"></i> Machine Learning</h3>
+                <h3><i class="fas fa-brain"></i>Programming, Data & Statistics</h3>
                 <div class="skill-tags">
                     <span>Python</span>
-                    <span>TensorFlow</span>
-                    <span>Keras</span>
-                    <span>Scikit-learn</span>
-                    <span>Deep Learning</span>
-                    <span>NLP</span>
-                </div>
-            </div>
-
-            <div class="skill-category">
-                <h3><i class="fas fa-database"></i> Data Engineering</h3>
-                <div class="skill-tags">
-                    <span>SQL (PostgreSQL)</span>
-                    <span>Pandas</span>
-                    <span>NumPy</span>
-                    <span>ETL Pipelines</span>
-                    <span>Data Wrangling</span>
-                </div>
-            </div>
-
-            <div class="skill-category">
-                <h3><i class="fas fa-chart-line"></i> Analytics & Math</h3>
-                <div class="skill-tags">
-                    <span>Statistics</span>
-                    <span>Linear Algebra</span>
+                    <span>SQL</span>
                     <span>Hypothesis Testing</span>
-                    <span>Tableau/PowerBI</span>
-                    <span>Business Intel</span>
+                    <span>Statistical Modeling</span>
+                    <span>Data Analysis</span>
+                    <span>Data Visualization</span>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h3><i class="fas fa-database"></i>Machine Learning, Deep Learning & NLP</h3>
+                <div class="skill-tags">
+                    <span>Supervised & Unsupervised Learning</span>
+                    <span>Feature Engineering</span>
+                    <span>Model Evaluation</span>
+                    <span>Hyperparameter Tuning</span>
+                    <span>Transformer-based Models</span>
+                    <span>Text Classification</span>
+                    <span>Embeddings</span>
+                    <span>Fine-tuning</span>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h3><i class="fas fa-chart-line"></i>MLOps & Production</h3>
+                <div class="skill-tags">
+                    <span>FastAPI</span>
+                    <span>MLflow</span>
+                    <span>Git</span>
+                    <span>CI/CD Pipelines</span>
+                    <span>Model Deployment</span>
                 </div>
             </div>
         </div>
