--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h1 class="glitch-text" data-text="Vashishth Raval">Vashishth Raval</h1>
             <h2 class="subtitle">Data Scientist & ML Engineer</h2>
             <div class="btn-container">
-                <a href="./Assets/Vashishth_Raval_Resume.pdf" target="_blank" class="btn btn-primary">
+                <a href="Assets/Vashishth_Raval_Associate_Business_Analyst.pdf" target="_blank" class="btn btn-primary">
                     <i class="fas fa-download"></i> Download CV
                 </a>
                 <a href="#contact" class="btn btn-secondary">
@@ -95,7 +95,7 @@
     </section>
 
     <section id="skills" class="container">
-        <h2 class="section-title">Technical Arsenal</h2>
+        <h2 class="section-title">Skills</h2>
         
         <div class="skills-grid">
             <div class="skill-category">
@@ -138,20 +138,17 @@
     </section>
 
     <section id="projects" class="container">
-        <h2 class="section-title">Deployments</h2>
+        <h2 class="section-title">Projects</h2>
         <div class="projects-grid">
             
             <div class="project-card">
                 <div class="project-image">
-                    <img src="https://via.placeholder.com/600x400/1e293b/38bdf8?text=Project+One" alt="Project 1">
+                    <img src="assets/Invest-Wise.png" alt="Project 1">
                 </div>
                 <div class="project-content">
-                    <h3>Predictive Analytics Engine</h3>
-                    <p>A machine learning model designed to forecast customer churn using historical transaction data.</p>
+                    <h3>InvestWise: Mutual Fund Recommendation System</h3>
+                    <p>An end-to-end AI-powered mutual fund recommendation system that combines supervised and unsupervised learning, advanced financial feature engineering, and clustering to deliver accurate, real-time personalized fund recommendations through a production-grade API.</p>
                     <div class="tech-stack">
-                        <small>Python</small>
-                        <small>XGBoost</small>
-                        <small>Flask</small>
                     </div>
                     <div class="project-links">
                         <a href="#" target="_blank" class="btn-sm"><i class="fab fa-github"></i> Code</a>
@@ -162,15 +159,12 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="https://via.placeholder.com/600x400/1e293b/38bdf8?text=Project+Two" alt="Project 2">
+                    <img src="assets/Youtube-Sentiment-AI.png" alt="Project 2">
                 </div>
                 <div class="project-content">
-                    <h3>Fintech Transaction Classifier</h3>
-                    <p>NLP-based system to categorize banking transactions automatically with 95% accuracy.</p>
+                    <h3>YouTube Sentiment AI – Sentiment Intelligence Platform</h3>
+                    <p>A real-time sentiment intelligence platform and Chrome extension that transforms large-scale YouTube comment streams into actionable insights using experiment tracking (MLflow), reproducible data pipelines (DVC), automated CI/CD, hyperparameter optimization (Optuna), and real-time inference via FastAPI.</p>
                     <div class="tech-stack">
-                        <small>TensorFlow</small>
-                        <small>BERT</small>
-                        <small>PostgreSQL</small>
                     </div>
                     <div class="project-links">
                         <a href="#" target="_blank" class="btn-sm"><i class="fab fa-github"></i> Code</a>
@@ -178,33 +172,12 @@
                     </div>
                 </div>
             </div>
-
-            <div class="project-card">
-                <div class="project-image">
-                    <img src="https://via.placeholder.com/600x400/1e293b/38bdf8?text=Project+Three" alt="Project 3">
-                </div>
-                <div class="project-content">
-                    <h3>Visual Data Dashboard</h3>
-                    <p>Interactive dashboard for visualizing real-time market trends and wallet usage.</p>
-                    <div class="tech-stack">
-                        <small>Streamlit</small>
-                        <small>Plotly</small>
-                        <small>Pandas</small>
-                    </div>
-                    <div class="project-links">
-                        <a href="#" target="_blank" class="btn-sm"><i class="fab fa-github"></i> Code</a>
-                        <a href="#" target="_blank" class="btn-sm btn-outline"><i class="fas fa-external-link-alt"></i> Live</a>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </section>
 
     <section id="contact" class="container">
-        <h2 class="section-title">Initialize Handshake</h2>
+        <h2 class="section-title">Connect</h2>
         <div class="glass-card contact-wrapper">
-            <p>Currently open to new opportunities in Data Science and ML Engineering.</p>
             <a href="mailto:vraval765@gmail.com" class="email-link">
                 <i class="fas fa-envelope-open-text"></i> vraval765@gmail.com
             </a>
