--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section id="hero">
         <div class="hero-content">
             <div class="profile-frame">
-                <img src="assets/profile-pic.png" alt="Vashishth Raval" onerror="this.src='https://via.placeholder.com/400x400/38bdf8/0f172a?text=VR'">
+                <img src="assets/Profile-Photo.jpeg" alt="Vashishth Raval" onerror="this.src='https://via.placeholder.com/400x400/38bdf8/0f172a?text=VR'">
             </div>
             <p class="greeting">Hello, I'm</p>
             <h1 class="glitch-text" data-text="Vashishth Raval">Vashishth Raval</h1>
