--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                     <div class="tech-stack">
                     </div>
                     <div class="project-links">
-                        <a href="#" target="_blank" class="btn-sm"><i class="fab fa-github"></i> Code</a>
-                        <a href="#" target="_blank" class="btn-sm btn-outline"><i class="fas fa-external-link-alt"></i> Live</a>
+                        <a href="https://github.com/vashishthraval6899/Mutual-Fund-Recommendation-System" target="_blank" class="btn-sm"><i class="fab fa-github"></i> Code</a>
+                        <a href="https://mutualfundrecommendationsystem.netlify.app/" target="_blank" class="btn-sm btn-outline"><i class="fas fa-external-link-alt"></i> Live</a>
                     </div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                     <div class="tech-stack">
                     </div>
                     <div class="project-links">
-                        <a href="#" target="_blank" class="btn-sm"><i class="fab fa-github"></i> Code</a>
+                        <a href="https://github.com/vashishthraval6899/yt-comment-sentiment-analysis" target="_blank" class="btn-sm"><i class="fab fa-github"></i> Code</a>
                         <a href="#" target="_blank" class="btn-sm btn-outline"><i class="fas fa-external-link-alt"></i> Live</a>
                     </div>
                 </div>
