--- a/index.html
+++ b/index.html
@@ -17,11 +17,20 @@
 
     <div class="canvas-background">
         <div class="doodle doodle-sun"><i class="fa-regular fa-sun"></i></div>
-        <div class="doodle doodle-rocket"><i class="fa-solid fa-rocket"></i></div>
-        <div class="doodle doodle-planet"><i class="fa-solid fa-earth-americas"></i></div>
-        <div class="doodle doodle-stars-1">✦</div>
-        <div class="doodle doodle-stars-2">✦</div>
         <div class="doodle doodle-moon"><i class="fa-solid fa-moon"></i></div>
+        <div class="doodle doodle-rocket"><i class="fa-solid fa-rocket"></i></div>
+        <div class="doodle doodle-planet-1"><i class="fa-solid fa-earth-americas"></i></div>
+        <div class="doodle doodle-planet-2"><i class="fa-solid fa-ring"></i></div>
+        
+        <div class="doodle doodle-meteor-1"><i class="fa-solid fa-meteor"></i></div>
+        <div class="doodle doodle-meteor-2"><i class="fa-solid fa-meteor"></i></div>
+        <div class="doodle doodle-galaxy"><i class="fa-solid fa-bahai"></i></div>
+        <div class="doodle doodle-shuttle"><i class="fa-solid fa-shuttle-space"></i></div>
+
+        <div class="doodle s1">✦</div><div class="doodle s2">✧</div>
+        <div class="doodle s3">✦</div><div class="doodle s4">✧</div>
+        <div class="doodle s5">✦</div><div class="doodle s6">✧</div>
+        <div class="doodle s7">✦</div><div class="doodle s8">✧</div>
     </div>
 
     <nav id="navbar">
@@ -33,10 +42,6 @@
                 <li><a href="#projects">Work</a></li>
                 <li><a href="#contact" class="nav-cta">Connect</a></li>
             </ul>
-            <div class="menu-toggle" onclick="toggleMenu()">
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
         </div>
     </nav>
 
@@ -170,8 +175,12 @@
             </div>
             <div class="footer-right">
                 <div class="footer-socials">
-                    <a href="https://linkedin.com/in/vashishthraval" target="_blank">LinkedIn</a>
-                    <a href="https://github.com/vashishthraval6899" target="_blank">GitHub</a>
+                    <a href="https://linkedin.com/in/vashishthraval" target="_blank" class="social-icon">
+                        <i class="fab fa-linkedin"></i> LinkedIn
+                    </a>
+                    <a href="https://github.com/vashishthraval6899" target="_blank" class="social-icon">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
                 </div>
                 <p class="copyright">&copy; 2025 Vashishth Raval. Focused on impact.</p>
             </div>
