--- a/index.html
+++ b/index.html
@@ -70,18 +70,17 @@
     <section id="about" class="section">
         <div class="container">
             <div class="section-intro">
-                <span class="label">01 // Philosophy</span>
-                <h2>Mission-Driven Data Science</h2>
+                <h2>About Me</h2>
             </div>
             <div class="about-grid">
                 <div class="about-text">
-                    <p>With over 2.5 years of experience in Fintech analytics, I have learned that the best models are those that solve human problems. My goal is to bridge the gap between complex algorithms and meaningful impact.</p>
-                    <p>I am currently refining my craft to become a world-class Data Scientist, focusing on building end-to-end Machine Learning systems that are as robust as they are insightful.</p>
+                    <p>Data Scientist with 2.5+ years of fintech analytics experience, with a strong foundation in Python, statistics, SQL, and machine learning.</p>
+                    <p>Experienced in building and deploying end-to-end ML systems for real-world business problems.</p>
                 </div>
                 <div class="about-stats">
                     <div class="stat-item">
-                        <span class="stat-num">2.5+</span>
-                        <span class="stat-desc">Years in Fintech Analytics</span>
+                        <span class="stat-num">2.5+ Years</span>
+                        <span class="stat-desc">Experience as Business Analyst</span>
                     </div>
                     <div class="stat-item">
                         <span class="stat-num">MSc</span>
@@ -95,8 +94,7 @@
     <section id="skills" class="section gray-bg">
         <div class="container">
             <div class="section-intro">
-                <span class="label">02 // Expertise</span>
-                <h2>Technical Toolkit</h2>
+                <h2>Skills</h2>
             </div>
             <div class="skills-grid">
                 <div class="skill-category">
@@ -133,8 +131,7 @@
     <section id="projects" class="section">
         <div class="container">
             <div class="section-intro">
-                <span class="label">03 // Selected Work</span>
-                <h2>Building the Future</h2>
+                <h2>Projects</h2>
             </div>
             <div class="project-list">
                 <div class="project-row">
@@ -143,7 +140,7 @@
                     </div>
                     <div class="project-info">
                         <h3>InvestWise: AI Mutual Fund Engine</h3>
-                        <p>Combining supervised and unsupervised learning to deliver personalized financial recommendations via a production-grade API. Designed for scalability and real-time accuracy.</p>
+                        <p>An end-to-end AI-powered mutual fund recommendation system that combines supervised and unsupervised learning, advanced financial feature engineering, and clustering to deliver accurate, real-time personalized fund recommendations through a production-grade API.</p>
                         <div class="project-links">
                             <a href="https://github.com/vashishthraval6899/Mutual-Fund-Recommendation-System" target="_blank">GitHub <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                             <a href="https://mutualfundrecommendationsystem.netlify.app/" target="_blank">Live Demo</a>
@@ -157,7 +154,7 @@
                     </div>
                     <div class="project-info">
                         <h3>YouTube Sentiment Intelligence</h3>
-                        <p>A high-fidelity sentiment analysis platform utilizing MLflow and DVC for reproducible pipelines. Includes a Chrome extension for real-time inference.</p>
+                        <p>A real-time sentiment intelligence platform and Chrome extension that transforms large-scale YouTube comment streams into actionable insights using experiment tracking (MLflow), reproducible data pipelines (DVC), automated CI/CD, hyperparameter optimization (Optuna), and real-time inference via FastAPI.</p>
                         <div class="project-links">
                             <a href="https://github.com/vashishthraval6899/yt-comment-sentiment-analysis" target="_blank">GitHub <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
@@ -170,7 +167,7 @@
     <footer id="contact">
         <div class="container footer-content">
             <div class="footer-left">
-                <h2>Let’s build something <br>meaningful together.</h2>
+                <h2>Let’s Connect</h2>
                 <a href="mailto:vraval765@gmail.com" class="email-link">vraval765@gmail.com</a>
             </div>
             <div class="footer-right">
@@ -182,7 +179,7 @@
                         <i class="fab fa-github"></i> GitHub
                     </a>
                 </div>
-                <p class="copyright">&copy; 2025 Vashishth Raval. Focused on impact.</p>
+                <p class="copyright">&copy; 2025 Vashishth Raval</p>
             </div>
         </div>
     </footer>
