--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <section id="about" class="section">
         <div class="container">
             <div class="section-intro">
+                <span class="label"></span>
                 <h2>About Me</h2>
             </div>
             <div class="about-grid">
