--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of Vashishth Raval - Data Scientist & Machine Learning Engineer">
-    <title>Vashishth Raval | Data Science & ML</title>
+    <title>Vashishth Raval | Data Scientist</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -70,8 +70,7 @@
     <section id="about" class="section">
         <div class="container">
             <div class="section-intro">
-                <span class="label"></span>
-                <h2>About Me</h2>
+                <span class="label"><h2>About Me</h2></span>
             </div>
             <div class="about-grid">
                 <div class="about-text">
