--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="hero-visual">
                 <div class="profile-container">
                     <div class="profile-image-wrapper">
-                        <img src="assets/Profile-Photo.jpeg" 
+                        <img src="assets/profile-pic (4).png" 
                              alt="Vashishth Raval" 
                              class="profile-image"
                              onerror="this.src='https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80'">
