--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
                 <div class="hero-badge">Data Scientist / ML Engineer</div>
                 <h1 class="hero-title">Vashishth Raval</h1>
                 <p class="hero-description">
-                    Building scalable machine learning systems with clean architecture. 
-                    Specializing in end-to-end ML pipelines, Fintech analytics, and 
-                    production-ready AI solutions.
+                Turning numbers into real-world impact through math, curiosity, and clean systems.
                 </p>
                 
                 <div class="hero-actions">
