--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-badge">Data Scientist / ML Engineer</div>
-                <h1 class="hero-title">Hey!</h1>
+                <h1 class="hero-title">Hey — I’m Vashishth 👋</h1>
                 <p class="hero-description">
-                Welcome to my small world on the internet 👋
-                I love working with numbers, building ML systems, and turning data into real impact.
+                Welcome to my little corner of the internet.
+                I love turning numbers into ML systems that solve real-world problems.
                 </p>
                 
                 <div class="hero-actions">
