--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-badge">Data Scientist / ML Engineer</div>
-                <h1 class="hero-title">Hey — I’m Vashishth 👋</h1>
+                <h1 class="hero-title">Hey! I’m Vashishth 👋</h1>
                 <p class="hero-description">
-                Welcome to my little corner of the internet.
+                Welcome to my little corner of the internet.<br>
                 I love turning numbers into ML systems that solve real-world problems.
                 </p>
                 
