--- a/index.html
+++ b/index.html
@@ -477,5 +477,36 @@
 
     <!-- JavaScript -->
     <script src="script.js"></script>
+
+    <!-- Cosmic Theme Elements -->
+    <svg style="display: none;">
+        <defs>
+            <!-- Star shapes -->
+            <symbol id="star-5" viewBox="0 0 24 24">
+                <path d="M12 2 L14.5 8.5 L21.5 9.5 L16.5 14.5 L18 21.5 L12 17.5 L6 21.5 L7.5 14.5 L2.5 9.5 L9.5 8.5 Z" 
+                      fill="none" 
+                      stroke="#f0c674" 
+                      stroke-width="1" 
+                      stroke-linecap="round" 
+                      stroke-linejoin="round"/>
+            </symbol>
+            <symbol id="star-6" viewBox="0 0 24 24">
+                <polygon points="12,2 14.5,8.5 21.5,9.5 16.5,14.5 18,21.5 12,17.5 6,21.5 7.5,14.5 2.5,9.5 9.5,8.5" 
+                         fill="none" 
+                         stroke="#ffdd59" 
+                         stroke-width="1" 
+                         stroke-linecap="round" 
+                         stroke-linejoin="round"/>
+            </symbol>
+            <!-- Planet outline -->
+            <symbol id="planet-ring" viewBox="0 0 40 40">
+                <circle cx="20" cy="20" r="15" 
+                        fill="none" 
+                        stroke="#a29bfe" 
+                        stroke-width="2" 
+                        stroke-dasharray="3,3"/>
+            </symbol>
+        </defs>
+    </svg>
 </body>
 </html>
