--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </p>
                 
                 <div class="hero-actions">
-                    <a href="Assets/Vashishth_Raval_Associate_Business_Analyst.pdf" 
+                    <a href="Assets/Vashishth_Raval_Data_Scientist (1).pdf" 
                        class="btn btn-primary" 
                        target="_blank">
                         <i class="fas fa-download"></i>
@@ -125,7 +125,7 @@
             <div class="hero-visual">
                 <div class="profile-container">
                     <div class="profile-image-wrapper">
-                        <img src="assets/profile-pic (4).png" 
+                        <img src="assets/profile-pic (2).png" 
                              alt="Vashishth Raval" 
                              class="profile-image"
                              onerror="this.src='https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80'">
