--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </p>
                 
                 <div class="hero-actions">
-                    <a href="Assets/Vashishth_Raval_Data_Scientist (1).pdf" 
+                    <a href="Assets/Vashishth_Raval_Data_Scientist.pdf" 
                        class="btn btn-primary" 
                        target="_blank">
                         <i class="fas fa-download"></i>
