--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         </div>
     </section>
     
-    <!-- Projects Section - UPDATED with minimalistic images and only GitHub + Video links -->
+    <!-- Projects Section - UPDATED with advanced tech images and fixed descriptions -->
     <section id="projects" class="section">
         <div class="container">
             <div class="section-header">
@@ -324,10 +324,28 @@
                 <!-- Project 1: TradeMind Pro -->
                 <article class="project-card">
                     <div class="project-image">
-                        <!-- Minimalistic gradient background instead of image -->
+                        <!-- Advanced tech visualization for TradeMind Pro -->
                         <div class="project-image-bg bg-gradient-1">
-                            <div class="project-image-overlay">
-                                <i class="fas fa-robot project-icon"></i>
+                            <div class="tech-visualization">
+                                <div class="agent-network">
+                                    <div class="agent bull-agent">
+                                        <i class="fas fa-chart-line"></i>
+                                        <span>Bull</span>
+                                    </div>
+                                    <div class="agent bear-agent">
+                                        <i class="fas fa-chart-line"></i>
+                                        <span>Bear</span>
+                                    </div>
+                                    <div class="agent judge-agent">
+                                        <i class="fas fa-gavel"></i>
+                                        <span>Judge</span>
+                                    </div>
+                                    <div class="connection-lines"></div>
+                                </div>
+                                <div class="rag-elements">
+                                    <div class="document-pulse"></div>
+                                    <div class="vector-db"></div>
+                                </div>
                             </div>
                         </div>
                         <div class="project-overlay">
@@ -369,10 +387,32 @@
                 <!-- Project 2: InvestWise -->
                 <article class="project-card">
                     <div class="project-image">
-                        <!-- Minimalistic gradient background instead of image -->
+                        <!-- Advanced tech visualization for InvestWise -->
                         <div class="project-image-bg bg-gradient-2">
-                            <div class="project-image-overlay">
-                                <i class="fas fa-chart-pie project-icon"></i>
+                            <div class="tech-visualization">
+                                <div class="clustering-viz">
+                                    <div class="data-points">
+                                        <div class="cluster-point" style="--i:1"></div>
+                                        <div class="cluster-point" style="--i:2"></div>
+                                        <div class="cluster-point" style="--i:3"></div>
+                                        <div class="cluster-point" style="--i:4"></div>
+                                        <div class="cluster-point" style="--i:5"></div>
+                                        <div class="cluster-point" style="--i:6"></div>
+                                        <div class="cluster-point" style="--i:7"></div>
+                                        <div class="cluster-point" style="--i:8"></div>
+                                    </div>
+                                    <div class="cluster-centers">
+                                        <div class="center"></div>
+                                        <div class="center"></div>
+                                        <div class="center"></div>
+                                    </div>
+                                </div>
+                                <div class="shap-elements">
+                                    <div class="shap-bar"></div>
+                                    <div class="shap-bar"></div>
+                                    <div class="shap-bar"></div>
+                                    <div class="shap-bar"></div>
+                                </div>
                             </div>
                         </div>
                         <div class="project-overlay">
@@ -414,10 +454,26 @@
                 <!-- Project 3: YouTube Sentiment AI -->
                 <article class="project-card">
                     <div class="project-image">
-                        <!-- Minimalistic gradient background instead of image -->
+                        <!-- Advanced tech visualization for YouTube Sentiment AI -->
                         <div class="project-image-bg bg-gradient-3">
-                            <div class="project-image-overlay">
-                                <i class="fab fa-youtube project-icon"></i>
+                            <div class="tech-visualization">
+                                <div class="sentiment-analysis">
+                                    <div class="comment-stream">
+                                        <div class="comment positive"></div>
+                                        <div class="comment negative"></div>
+                                        <div class="comment neutral"></div>
+                                        <div class="comment positive"></div>
+                                        <div class="comment negative"></div>
+                                    </div>
+                                    <div class="sentiment-meter">
+                                        <div class="meter-fill"></div>
+                                    </div>
+                                    <div class="ml-pipeline">
+                                        <div class="pipeline-stage"></div>
+                                        <div class="pipeline-stage"></div>
+                                        <div class="pipeline-stage"></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="project-overlay">
