--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <article class="project-card">
                     <div class="project-image">
                         <!-- Image from assets folder -->
-                        <img src="assets/TradeMindPRO.png" 
+                        <img src="Assets/TradeMindPRO.png" 
                              alt="TradeMind Pro - Multi-Agent Financial Intelligence System"
                              onerror="this.src='https://images.unsplash.com/photo-1611974789855-9c2a0a7236a3?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80'">
                         <div class="project-overlay">
@@ -368,7 +368,7 @@
                 <article class="project-card">
                     <div class="project-image">
                         <!-- Image from assets folder -->
-                        <img src="assets/iInvestWise.png" 
+                        <img src="Assets/InvestWise.png" 
                              alt="InvestWise - Hybrid Mutual Fund Recommendation Engine"
                              onerror="this.src='https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80'">
                         <div class="project-overlay">
@@ -411,7 +411,7 @@
                 <article class="project-card">
                     <div class="project-image">
                         <!-- Image from assets folder -->
-                        <img src="assets/YouTubeSentiment.png" 
+                        <img src="Assets/YouTubeSentiment.png" 
                              alt="YouTube Sentiment AI - MLOps-Powered Influencer Analytics Platform"
                              onerror="this.src='https://images.unsplash.com/photo-1611224923853-80b023f02d71?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80'">
                         <div class="project-overlay">
