--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                                 <i class="fab fa-github"></i>
                                 GitHub
                             </a>
-                            <a href="#" 
+                            <a href="https://www.youtube.com/watch?v=H17HkokHkO4&feature=youtu.be" 
                                class="project-link"
                                target="_blank">
                                 <i class="fas fa-video"></i>
@@ -371,7 +371,7 @@
                                 <i class="fab fa-github"></i>
                                 GitHub
                             </a>
-                            <a href="#" 
+                            <a href="https://www.youtube.com/watch?v=tXn_kNqxA54" 
                                class="project-link"
                                target="_blank">
                                 <i class="fas fa-video"></i>
@@ -412,7 +412,7 @@
                                 <i class="fab fa-github"></i>
                                 GitHub
                             </a>
-                            <a href="#" 
+                            <a href="https://youtu.be/RjEwkkH8Sbk" 
                                class="project-link"
                                target="_blank">
                                 <i class="fas fa-video"></i>
