--- a/index.html
+++ b/index.html
@@ -504,28 +504,28 @@
             </div>
             
             <div class="awards-grid">
-                <a href="YOUR_LINK_HERE" target="_blank" class="award-card">
+                <a href="https://www.linkedin.com/feed/update/urn:li:activity:7291431724658401280/" target="_blank" class="award-card">
                     <div class="award-icon"><i class="fas fa-award"></i></div>
                     <h3 class="award-title">Letter of Recommendation in AI/ML</h3>
                     <p class="award-desc">For contribution at the System Design Lab on Deep Learning problems at DA-IICT.</p>
                     <span class="award-link-text">View Details <i class="fas fa-external-link-alt"></i></span>
                 </a>
                 
-                <a href="YOUR_LINK_HERE" target="_blank" class="award-card">
+                <a href="https://www.credly.com/badges/92f903bd-2fca-4a91-8e8d-85c0b2a34f0e/linked_in_profile/" target="_blank" class="award-card">
                     <div class="award-icon"><i class="fas fa-certificate"></i></div>
                     <h3 class="award-title">Applied Data Science Lab</h3>
                     <p class="award-desc">World Quant University</p>
                     <span class="award-link-text">View Certificate <i class="fas fa-external-link-alt"></i></span>
                 </a>
 
-                <a href="YOUR_LINK_HERE" target="_blank" class="award-card">
+                <a href="https://www.linkedin.com/feed/update/urn:li:activity:7291431724658401280/" target="_blank" class="award-card">
                     <div class="award-icon"><i class="fas fa-trophy"></i></div>
                     <h3 class="award-title">Unsung Hero Award</h3>
                     <p class="award-desc">Recognized for outstanding performance as a Business Analyst at Bankai Infotech Ltd.</p>
                     <span class="award-link-text">View Details <i class="fas fa-external-link-alt"></i></span>
                 </a>
 
-                <a href="YOUR_LINK_HERE" target="_blank" class="award-card">
+                <a href="https://www.linkedin.com/in/vashishthraval/details/certifications/1745694596276/single-media-viewer?profileId=ACoAACwtd-sBdwEC9M9qxW9XlBNg2lQ1SgC8prU" target="_blank" class="award-card">
                     <div class="award-icon"><i class="fas fa-university"></i></div>
                     <h3 class="award-title">Certified Banking Domain Professional</h3>
                     <p class="award-desc">MVLCO Center for Banking and Fintech</p>
@@ -539,7 +539,7 @@
                     <span class="award-link-text">View Certificate <i class="fas fa-external-link-alt"></i></span>
                 </a>
 
-                <a href="YOUR_LINK_HERE" target="_blank" class="award-card">
+                <a href="https://www.linkedin.com/in/vashishthraval/details/certifications/1723388705798/single-media-viewer?profileId=ACoAACwtd-sBdwEC9M9qxW9XlBNg2lQ1SgC8prU" target="_blank" class="award-card">
                     <div class="award-icon"><i class="fas fa-medal"></i></div>
                     <h3 class="award-title">Nationalist Athlete</h3>
                     <p class="award-desc">All India University West Zone Inter University Tournament (Indore, 2019).</p>
